webkit (1.7.5-1) experimental; urgency=low

  * New development release
  * debian/patches/03_fix-documentation-build.patch:
  - refreshed, with changes from upstream

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 15 Feb 2012 23:56:15 -0200

webkit (1.7.4-1) experimental; urgency=low

  * New development release
  * debian/patches/01_double-conversion.patch:
  - refreshed; partially applied upstream
  * debian/patches/03_freebsd-fix.patch,
    debian/patches/04_pkgconfig-fix.patch:
  - removed; applied upstream
  * debian/patches/03_fix-documentation-build.patch:
  - added; fix building docs for the GTK+ 2 library
  * debian/control:
  - update build-dependency for libsoup2.4-dev to 2.37.4
  - add libgl1-mesa-dev as a B-D, since we now build with
    WebGL enabled by default
  * debian/rules:
  - adapted doc installation to the new system
  * debian/*.install:
  - include directory got renamed webkit->webkitgtk
  * debian/libwebkit*.symbols:
  - updated

 -- Gustavo Noronha Silva <kov@debian.org>  Thu, 19 Jan 2012 00:09:29 -0200

webkit (1.6.3-1) unstable; urgency=low

  * debian/patches/04_pkgconfig-fix.patch:
  - removed; applied in this upstream version
  * debian/rules:
  - move -Wl,--no-relax to LD_FLAGS, when building on alpha, and add
    LDFLAGS as a parameter (part of #648761)
  * debian/patches/01_double-conversion.patch:
  - add CPU(ALPHA) to the list of cpus that pass the test
    (Closes: #648761)
  * debian/patches/04_hurd-fix.patch:
  - patch by Pino Toscano <pino@debian.org> to fix FTBFS on Hurd
    (Closes: #649192)
  * debian/rules:
  - accepted patch by Moritz Muehlenhoff <jmm@debian.org> to use
    dpkg-buildflags for cflags/cppflags/ldflags (Closes: #659391)
  * debian/control:
  - add Conflicts and Replaces combo on libjavascriptcoregtk-1.0-dev also
    for libwebkit-dev << 1.5.0 (Closes: #657408)

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 15 Feb 2012 23:29:11 -0200

webkit (1.6.3-1) unstable; urgency=low
