@@ -3,8 +3,10 @@ webkit (1.7.5-1) experimental; urgency=low
   * New development release
   * debian/patches/03_fix-documentation-build.patch:
   - refreshed, with changes from upstream
+  * debian/patches/04_hurd-fix.patch:
+  - refreshed;
 
- -- Gustavo Noronha Silva <kov@debian.org>  Wed, 15 Feb 2012 23:56:15 -0200
+ -- Gustavo Noronha Silva <kov@debian.org>  Thu, 16 Feb 2012 00:24:29 -0200
 
 webkit (1.7.4-1) experimental; urgency=low
 
